# dialogflow_ros

./: CMakeLists.txt  context.yaml  google_client.py  instructions.py  instructions.sh  instructions2.py  mic_client.py  package.xml  requirements.txt  requirements3.txt
action/: GetOrder.action
config/: params.yaml
dialogflow_ros/: MicrophoneStream.py  dialogflow_client.py
json_folder/: gentle-proton-252714-066b7ef02309.json
launch/: dialogflow_ros.launch
scripts/: audio_server.py  mic_client.py  test_audio.py  test_message.py
src/dialogflow_ros/: AudioServerStream.py  dialogflow_client.py
test/: test_intent_text.py
