<?xml version="1.0"?>
<package format="2">
  <name>dialogflow_ros</name>
  <version>0.1.0</version>
  <description>The ros_dialogflow package</description>
  <maintainer email="anas9011@gmail.com">Anas Abou Allaban</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ros_dialogflow</url> -->
  <author email="anas9011@gmail.com">Anas Abou Allaban</author>


  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <build_depend>message_generation</build_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>


  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
